# xupt-linux-plan

./: README.md  io.c
chatroom/: CMakeLists.txt  README.md
chatroom/chatroom/: .gitignore  CMakeLists.txt  README.md  badgetoolbutton.h  client.cpp  client.h  createfrienddialog.cpp  createfrienddialog.h  creategroupdialog.cpp  creategroupdialog.h  customtablewidgetitem.cpp  customtablewidgetitem.h  filemenu.cpp  filemenu.h  filemenu.ui  found.cpp  found.h  found.ui  informations.cpp  informations.h  informations.ui  log.cpp  log.h  log.qrc  log.ui  main.cpp  menu.cpp  menu.h  menu.ui  menu2.cpp  menu2.h  menu2.ui  msgtype.h  mysocket.cpp  mysocket.h  redis.cpp  redis.h  reg.cpp  reg.h  reg.ui  (+14 more)
chatroom/pratice/: cli  cli.cc
chatroom/src/: CMakeLists.txt
chatroom/src/code/: json.cc
chatroom/src/code/cli/: CmakeLists.txt
chatroom/src/code/cli/back/: CMakeLists.txt  cli.cc  cli.hpp  cli_command.hpp  menu.cpp  menu.hpp  users.cc
chatroom/src/code/cli/format/: CMakeLists.txt  menu.cpp  menu.ui
chatroom/src/code/format/: menu.cpp  menu.hpp  menu.ui
chatroom/src/code/rapidjson/: json.cc
chatroom/src/code/redis/: redis  redis.cc  redis.hpp
chatroom/src/code/sever/: svr  svr.cc  svr.hpp
chatroom/src/include/: json.hpp  menu.hpp  redis.hpp  threadpool.hpp
header/: error_functions.h  tlpi_hdr.h
list_file/: list_file.c
ls/: mycpy.c
ls/header/: get_num.h
ls/list_file/: error_functions.c  get_num.c
ls/my_ls/: ls.c
ls/my_stack/: main.c
my_stack/: my_stack.c  my_stack.h
net/: i6d_socket.h  i6d_ucase_cl  i6d_ucase_cl.c  socket.md
net/plan/: cli  client.cc  sever.cc  svr
net/pratice/: i6d_ucase_sv.c  svr
practice/: 1.c  3.c
shell/: mysh.c  mysh.md
shell/practice/: 2.c  2.txt
thread/: 1  1.cpp  factorial  factorial.cpp  mythreads.cpp  mythreads.hpp  searchFiles  searchFiles.cpp
